src/main/resources/tests/Semantics/good/assignmentType2.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
   X : boolean := false;
begin
    X := false;
end ExampleProcedure;
