src/main/resources/tests/Semantics/bad/operationReturn1.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
X : boolean;
begin
   X := 1 - 2;
end ExampleProcedure;
